Fri Jun 22 16:17:23 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.c: avoid a stupid bug when compiling with
	  libxml < 2.3.11 and without LIBXML_DEBUG_ENABLED

Fri Jun 22 00:11:18 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/numbers.c: fix of a small bug
	* libxslt/transform.c libxslt/variables.c libxslt/xslt.c: cleanups
	  while bug-hunting

Tue Jun 19 16:13:49 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/docbook/Makefile.am: added XHTML and XSL FO to the
	  regression tests
	* tests/docbook/xhtml/*: added XHTML stylesheets
	* tests/docbook/fo/*: added XSL FO stylesheets
	* tests/docbook/result/xhtml/*: added XHTML results
	* tests/docbook/result/fo/*: added XSL FO results

Tue Jun 19 00:20:32 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* HACKING: fixed, added William

Mon Jun 18 18:36:36 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltutils.c: forgot to flush in xsltSaveTo() in html and
	  xml cases, and fixed text output to be recursive in text nodes
	  lookups

Mon Jun 18 15:44:51 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in: patch from Tony Graham to cleanup libxml2 detection

Sun Jun 17 17:42:33 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltutils.[ch]: fixed xsltGetNsProp, i always forget
	  'namespace' is a reserved C++ identifier

Sun Jun 17 17:08:30 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/xslt.html: adding 0.12.0 release

Sun Jun 17 13:15:48 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in: preparing 0.12.0 release
	* libxslt/transform.c: a bit of cleanup on the XInclude defaults
	* libxslt/xsltconfig.h.in: added doc inline comment
	* libxslt/xslt.[ch] libxslt/xsltproc.c: added more version informations
	  and enriched xsltproc --version to show them
	* doc/html/*.html: rebuilt the docs
	* doc/Makefile.am libxslt.spec.in: try to make sure John Fleck